separate customer and supplier, edit profile pages

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -667,11 +667,15 @@
   "ProfileSettingsForm.lastNameLabel": "Last name",
   "ProfileSettingsForm.lastNamePlaceholder": "Doe",
   "ProfileSettingsForm.lastNameRequired": "This field is required",
+  "ProfileSettingsForm.phoneLabel": "Phone number",
+  "ProfileSettingsForm.phonePlaceholder": "111-111-1111",
+  "ProfileSettingsForm.phoneRequired": "This field is required",
   "ProfileSettingsForm.saveChanges": "Save changes",
   "ProfileSettingsForm.tip": "Tip: Choose an image where your face is recognizable.",
   "ProfileSettingsForm.updateProfileFailed": "Whoops, something went wrong. Please try again.",
   "ProfileSettingsForm.yourName": "Your name",
   "ProfileSettingsForm.yourProfilePicture": "Your profile picture",
+  "ProfileSettingsForm.phoneNumber": "Your phone number",
   "ProfileSettingsPage.heading": "Profile settings",
   "ProfileSettingsPage.title": "Profile settings",
   "ProfileSettingsPage.viewProfileLink": "View your profile",
