1) Added common attributes tab 2) separate category into standalone tab

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -157,7 +157,7 @@
   "EditListingDescriptionForm.titleRequired": "You need to add a name.",
   "EditListingDescriptionForm.updateFailed": "Failed to update listing. Please try again.",
   "EditListingDescriptionPanel.createListingTitle": "Add your sauna",
-  "EditListingDescriptionPanel.title": "Edit details of {listingTitle}",
+  "EditListingDescriptionPanel.title": "Choose the service type of {listingTitle}",
   "EditListingFeaturesForm.showListingFailed": "Fetching listing data failed",
   "EditListingFeaturesForm.updateFailed": "Failed to update listing. Please try again.",
   "EditListingFeaturesPanel.createListingTitle": "What amenities does your sauna have?",
@@ -224,7 +224,8 @@
   "EditListingWizard.saveNewPhotos": "Publish listing",
   "EditListingWizard.saveNewPolicies": "Next: Location",
   "EditListingWizard.saveNewPricing": "Next: Availability",
-  "EditListingWizard.tabLabelDescription": "Description",
+  "EditListingWizard.tabLabelDescription": "Category",
+  "EditListingWizard.tabLabelCommonAttributes": "Service details",
   "EditListingWizard.tabLabelFeatures": "Amenities",
   "EditListingWizard.tabLabelAvailability": "Availability",
   "EditListingWizard.tabLabelLocation": "Location",
