--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -147,13 +147,13 @@
   "EditListingDescriptionForm.categoryPlaceholder": "Choose the type of your sauna…",
   "EditListingDescriptionForm.categoryRequired": "You need to select a category for your sauna.",
   "EditListingDescriptionForm.createListingDraftError": "Failed to create a draft listing. Please try again.",
-  "EditListingDescriptionForm.description": "Describe your sauna",
+  "EditListingDescriptionForm.description": "Describe your service",
   "EditListingDescriptionForm.descriptionPlaceholder": "How many people can fit at once? Does the sauna come with towels?",
   "EditListingDescriptionForm.descriptionRequired": "A description is required.",
   "EditListingDescriptionForm.maxLength": "Must be {maxLength} characters or less",
   "EditListingDescriptionForm.showListingFailed": "Fetching listing data failed",
-  "EditListingDescriptionForm.title": "The name of your sauna",
-  "EditListingDescriptionForm.titlePlaceholder": "What's the name of your sauna?",
+  "EditListingDescriptionForm.title": "The name of your service",
+  "EditListingDescriptionForm.titlePlaceholder": "What's the name of your service product?",
   "EditListingDescriptionForm.titleRequired": "You need to add a name.",
   "EditListingDescriptionForm.updateFailed": "Failed to update listing. Please try again.",
   "EditListingDescriptionPanel.createListingTitle": "Add your sauna",
