1 hided no use tabs in edit listing page, 2. moved travel option from profile page to listing page. 3 added wechat, phone, email to profile page

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -148,7 +148,7 @@
   "EditListingDescriptionForm.categoryRequired": "You need to select a category for your sauna.",
   "EditListingDescriptionForm.createListingDraftError": "Failed to create a draft listing. Please try again.",
   "EditListingDescriptionForm.description": "Describe your service",
-  "EditListingDescriptionForm.descriptionPlaceholder": "How many people can fit at once? Does the sauna come with towels?",
+  "EditListingDescriptionForm.descriptionPlaceholder": "What's the highlights of your service? What can you help cusomers achieve?",
   "EditListingDescriptionForm.descriptionRequired": "A description is required.",
   "EditListingDescriptionForm.maxLength": "Must be {maxLength} characters or less",
   "EditListingDescriptionForm.showListingFailed": "Fetching listing data failed",
@@ -655,9 +655,9 @@
   "ProfileSettingsForm.addYourProfilePicture": "+ Add your profile picture…",
   "ProfileSettingsForm.addYourProfilePictureMobile": "+ Add",
   "ProfileSettingsForm.bioHeading": "Your profile bio",
-  "ProfileSettingsForm.bioInfo": "Saunatime is built on relationships. Help other people get to know you.",
-  "ProfileSettingsForm.bioLabel": "Bio",
-  "ProfileSettingsForm.bioPlaceholder": "Tell us a little bit about yourself…",
+  "ProfileSettingsForm.bioInfo": "You can mention years in the business, what certificates you have, what is your special skills, help our customers to know you!",
+  "ProfileSettingsForm.bioLabel": "Tell customers about your business and yourself",
+  "ProfileSettingsForm.bioPlaceholder": "Explain what makes your business stand out and why you will do a great job",
   "ProfileSettingsForm.changeAvatar": "Change",
   "ProfileSettingsForm.fileInfo": ".JPG, .GIF or .PNG. Max. 20 MB",
   "ProfileSettingsForm.firstNameLabel": "First name",
