--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -638,7 +638,7 @@
   "PriceFilterForm.clear": "Clear",
   "PriceFilterForm.label": "Price range:",
   "PriceFilterForm.submit": "Apply",
-  "PrivacyPolicyPage.heading": "Saunatime Privacy Policy",
+  "PrivacyPolicyPage.heading": "Privacy Policy",
   "PrivacyPolicyPage.privacyTabTitle": "Privacy Policy",
   "PrivacyPolicyPage.schemaTitle": "Privacy Policy | {siteTitle}",
   "PrivacyPolicyPage.tosTabTitle": "Terms of Service",
